Update test examples

--- a/tests/data/nanonis/afm/version_gen_4_default_config/eln_data.yaml
+++ b/tests/data/nanonis/afm/version_gen_4_default_config/eln_data.yaml
@@ -1,17 +1,3 @@
-Sample:
-  History:
-    Note: 
-      description: <p>Sample history goes here.</p>
-  description: <p>Description.</p>
-  name: Demo Name
-  Sample_component_set:
-    Sample_component:
-      name: ComponentName
-identifier_collection: DemoCollectionIdentifier-12345
-default: current_forward
-definition: NXafm
-experiment_description: <p>Experiment Description.</p>
-identifier_experiment: DemoExperimentIdentifier-12345
 Instrument:
   hardware:
     model: Generic 4
@@ -23,11 +9,26 @@ Instrument:
     model/@version: '4'
     name: Nanonis
     vendor: Nanonis
+Sample:
+  Sample_component:
+  - chemical_formula: ' KAl₂(AlSi₃O₁₀)(OH)₂)'
+    description: <p>Gold on Mica.</p>
+    name: Au(Mica)
+  description: <p>We used the diPAMY sample used in this demo example.</p>
+  name: diPAMY
+default: current_forward
+definition: NXafm
+experiment_description: <p>An demo NeXus example for AFM.&nbsp;</p>
 experiment_technique: AFM
+identifier_collection: D:\\Data\\123306
+identifier_experiment: D:\\Data\\123306\A151216.123306-02602
 scan_mode: tapping mode
-User:
-  affiliation:
-  - HU
+user:
+- affiliation:
+  - Dr. Cojal González, José David (HU)
+  - Prof. Carlos-Andres Palma (HU)
   email:
-  - rubel.mozumder@physik.hu-berlin.de
+  - cojal@physik.hu-berlin.de
+  - palma@physik.hu-berlin.de
+  - mozumder@physik.hu-berlin.de
   name: Rubel Mozumder
