--- a/tests/data/nanonis/sts/version_gen_5e_default_config/eln_data.yaml
+++ b/tests/data/nanonis/sts/version_gen_5e_default_config/eln_data.yaml
@@ -1,18 +1,3 @@
-Sample:
-  History:
-    Note: 
-      description: <p>Sample history goes here.</p>
-  description: <p>Sample description is here.</p>
-  name: DemoSample
-  Sample_component_set:
-    Sample_component:
-      description: <p>Description of the sample component</p>
-      name: DemoSampleComponent
-identifier_collection: STSCollectionIdentifier-1234
-default: current_grad
-definition: NXsts
-experiment_description: <p>The experiment description is here.</p>
-identifier_experiment: STSExperimentIdentifier-1234
 Instrument:
   hardware:
     model: Generic 5e
@@ -21,16 +6,41 @@ Instrument:
     vendor: Nanonis
   lockin_amplifier:
     lockin_current_flip_sign: -1.0
-    modulation_signal: current
+    modulation_signal: Current
   software:
     model: Generic 5e
     model/@version: 5e
     name: Nanonis
     vendor: Nanonis
+Sample:
+  History:
+    Note:
+      description: <p>The experiment was run in Carlos' Lab.</p>
+  Sample_component:
+    chemical_formula: ' KAl₂(AlSi₃O₁₀)(OH)₂)'
+    description: '<pre class="western">Substrate:</pre>
+
+      <pre class="western">two-layer stack: Au-Mica.</pre>'
+    name: Au(Mica)
+  description: <p>A demo example experiment run in a Lab.</p>
+  name: diPAMY
+default: current_grad
+scan_mode: constant height
+definition: NXsts
+experiment_description: '<p>A demo example for NeXus STS experiment.</p>
+
+  <pre class="western">Bias: -50mA</pre>
+
+  <pre class="western">Setpoints: 25pA</pre>'
 experiment_technique: STS
-User:
+identifier_collection: D://Au_mica_2023_Y_A_diPAMY_154-211C_370C_1min_385C_30min_400C_1min_400C_30min_415_30min_430_30min_11min_30min_30min_20230419_
+identifier_experiment: D://Au_mica_2023_Y_A_diPAMY_154-211C_370C_1min_385C_30min_400C_1min_400C_30min_415_30min_430_30min_11min_30min_30min_20230419_20230420
+user:
   affiliation:
-  - HU
+  - Dr. Carlos-Andres Palma (HU)
+  - Dr. Cojal González (HU)
   email:
-  - rubel.mozumder@physik.hu-berlin.de
-  name: Rubel Mozumer
+  - mozumder@physik.hu-berlin.de
+  - cojal@physik.hu-berlin.de
+  - palma@physik.hu-berlin.de
+  name: Rubel Mozumder
