--- a/src/pynxtools_spm/nomad/examples/stm/STMExampleWithCustomization/config.json
+++ b/src/pynxtools_spm/nomad/examples/stm/STMExampleWithCustomization/config.json
@@ -45,7 +45,7 @@
             },
             "step_size_N[step_size_n]": { "raw_path": "", "@units": "" },
             "scan_time": "",
-            "SCAN_data[scan_data]": ""
+            "SCAN_DATA[scan_data]": ""
           },
           "scan_region": {
             "scan_angle_N[scan_angle_n]": {
@@ -266,7 +266,7 @@
               "backward_sweep": {
                 "raw_path": "/Bias Spectroscopy/backward sweep"
               },
-              "SCAN_data[scan_data]": ""
+              "SCAN_DATA[scan_data]": ""
             }
           },
           "CIRCUIT[circuit]": ""
