--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,7 @@
     "plaintext": false,
     "markdown": true,
     "scminput": false,
-    "python": false,
+    "python": true,
     "json": true
   },
   "editor.defaultFormatter": "charliermarsh.ruff",
