--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,8 +1,8 @@
 name: pynxtools-spm package
 
 on:
-  push:
-    branches: [ ci_cd ]
+  pull_request:
+    branches: [ main ]
 jobs:
   build:
     runs-on: ubuntu-latest
