--- a/src/pynxtools_spm/nomad/examples/stm/STMExampleWithCustomization/config.json
+++ b/src/pynxtools_spm/nomad/examples/stm/STMExampleWithCustomization/config.json
@@ -2,13 +2,14 @@
   "ENTRY[entry]": {
     "@default": { "raw_path": "@default:current_backward" },
     "identifier_collection": "",
-    "definition": "",
-    "end_time": "",
-    "entry_identifier": "",
-    "start_time": "",
+    "start_time": {
+      "#note": "Handled in function _set_start_end_time"
+    },
+    "end_time": {
+      "#note": "Handled in function _set_start_end_time"
+    },
     "scan_mode": "",
     "scan_type": "",
-    "identifier_experiment": { "identifier": "" },
     "experiment_description": { "raw_path": "/COMMENT" },
     "INSTRUMENT[instrument]": {
       "scan_environment": {
@@ -80,24 +81,9 @@
         },
         "independent_controllers": "",
         "measurement_sensors": "",
-        "cryo_shield_temp_sensor": {
-          "calibration_time": "",
-          "run_control": "",
-          "value": "",
-          "value_timestamp": ""
-        },
-        "cryo_temp_sensor": {
-          "calibration_time": "",
-          "run_control": "",
-          "value": "",
-          "value_timestamp": ""
-        },
-        "tip_temp_sensor": {
-          "calibration_time": "",
-          "run_control": "",
-          "value": "",
-          "value_timestamp": ""
-        }
+        "cryo_shield_temp_sensor": "@default_link:/ENTRY[entry]/INSTRUMENT[instrument]/cryo_shield_temp_sensor",
+        "cryo_temp_sensor": "@default_link:/ENTRY[entry]/INSTRUMENT[instrument]/cryo_temp_sensor",
+        "tip_temp_sensor": "@default_link:/ENTRY[entry]/INSTRUMENT[instrument]/tip_temp_sensor"
       },
       "current_sensor": {
         "current": {
@@ -116,7 +102,7 @@
           "calibration_time": ""
         },
         "AMPLIFIER[amplifier]": {
-          "current_gain": { "raw_path": "/Current/Gain" }
+          "current_gain": { "raw_path": "" }
         }
       },
       "lockin_amplifier": {
@@ -270,15 +256,6 @@
             }
           },
           "CIRCUIT[circuit]": ""
-        },
-        "current_sensor": {
-          "AMPLIFIER[amplifier]": { "current_gain": "" },
-          "current": "",
-          "current_calibration": {
-            "calibration_time": "",
-            "coefficients": ""
-          },
-          "current_offset": ""
         }
       },
       "piezo_sensor": {
@@ -546,15 +523,20 @@
       }
     ],
     "reproducibility_indicators": {
-      "current": "",
-      "current_gain": "",
-      "current_offset": "",
-      "reference_frequency": "",
-      "modulation_signal": ""
+      "current": "@default_link:/ENTRY[entry]/INSTRUMENT[instrument]/current_sensor/current",
+      "current_gain": "@default_link:/ENTRY[entry]/INSTRUMENT[instrument]/current_sensor/AMPLIFIER[amplifier]/current_gain",
+      "current_offset": "@default_link:/ENTRY[entry]/INSTRUMENT[instrument]/current_sensor/current_offset",
+      "bias_sweep": "@default_link:/ENTRY[entry]/INSTRUMENT[instrument]/bias_spectroscopy_environment/BIAS_SPECTROSCOPY[bias_spectroscopy]/BIAS_SWEEP[bias_sweep]",
+      "reference_frequency": "@default_link:/ENTRY[entry]/INSTRUMENT[instrument]/lockin_amplifier/reference_frequency",
+      "modulation_signal": "@default_link:/ENTRY[entry]/INSTRUMENT[instrument]/lockin_amplifier/modulation_signal"
     },
     "resolution_indicators": {
-      "reference_frequency": "",
-      "modulation_signal": ""
+      "stm_head_temp": "@default_link:/ENTRY[entry]/INSTRUMENT[instrument]/scan_environment/tip_temp",
+      "cryo_bottom_temp": "@default_link:/ENTRY[entry]/INSTRUMENT[instrument]/scan_environment/cryo_bottom_temp",
+      "cryo_shield_temp": "@default_link:/ENTRY[entry]/INSTRUMENT[instrument]/scan_environment/cryo_shield_temp",
+      "bias_sweep": "@default_link:/ENTRY[entry]/INSTRUMENT[instrument]/bias_spectroscopy_environment/BIAS_SPECTROSCOPY[bias_spectroscopy]/BIAS_SWEEP[bias_sweep]",
+      "reference_frequency": "@default_link:/ENTRY[entry]/INSTRUMENT[instrument]/lockin_amplifier/reference_frequency",
+      "modulation_signal": "@default_link:/ENTRY[entry]/INSTRUMENT[instrument]/lockin_amplifier/modulation_signal"
     }
   }
 }
