add the branch of hdf5 validation.

--- a/.github/workflows/publish_compatibility_with_pynxtools.yml
+++ b/.github/workflows/publish_compatibility_with_pynxtools.yml
@@ -13,7 +13,8 @@ jobs:
       fail-fast: false
       # TODO check Disable this test from block merge request
       matrix:
-        pynxtools_versions: ["latest_release", "master"]
+        pynxtools_versions: ["hdf-based-validation"]
+        # pynxtools_versions: ["latest_release", "master"]
         # pynxtools_versions: ["master"]
         python-versions: ["3.12"]
  
