--- a/src/pynxtools_spm/nomad/examples/sts/STSExampleWithCustomization/config.json
+++ b/src/pynxtools_spm/nomad/examples/sts/STSExampleWithCustomization/config.json
@@ -27,7 +27,7 @@
           "raw_path": "/Lock-in/Amplitude/value",
           "@units": "/Lock-in/Modulated signal/Bias/unit"
         },
-        "low_pass_N": [
+        "low_passN": [
           {
             "d1": {
               "raw_path": "/Lock-in/LP Filter Cutoff D1/value",
@@ -41,13 +41,13 @@
             }
           }
         ],
-        "lp_filter_order_N": [
+        "lp_filter_orderN": [
           {
             "d1": { "raw_path": "/Lock-in/LP Filter Order D1/value" },
             "d2": { "raw_path": "/Lock-in/LP Filter Order D2/value" }
           }
         ],
-        "hi_pass_N": [
+        "high_passN": [
           {
             "d1": {
               "raw_path": "/Lock-in/HP Filter Cutoff D1/value",
@@ -61,11 +61,11 @@
             }
           }
         ],
-        "hp_filter_order_N": [
+        "hp_filter_orderN": [
           { "d1": { "raw_path": "/Lock-in/HP Filter Order D1/value" } },
           { "d2": { "raw_path": "/Lock-in/HP Filter Order D2/value" } }
         ],
-        "ref_phase_N[ref_phase_n]": [
+        "ref_phaseN[ref_phase_n]": [
           {
             "d1": {
               "raw_path": "/Lock-in/Reference phase D1/value",
@@ -79,35 +79,34 @@
             }
           }
         ],
-        "harmonic_order_N[harmonic_order_n]": [
+        "harmonic_orderN[harmonic_order_n]": [
           { "d1": { "raw_path": "/Lock-in/Harmonic D1/value" } },
           { "d2": { "raw_path": "/Lock-in/Harmonic D2/value" } }
         ]
       },
       "real_time_controller": {
-        "rcs_fabrication": {
+        "fabrication": {
           "model": {
             "raw_path": "/NanonisMain/RT Release/value"
           }
         },
-        "rcs_frequency": {
+        "frequency": {
           "raw_path": "/NanonisMain/RT Frequency/value",
           "@units": "/NanonisMain/RT Frequency/unit"
         },
-
-        "rcs_acquisition_time": {
+        "acquisition_time": {
           "raw_path": "/NanonisMain/Acquisition Period/value",
           "@units": "/NanonisMain/Acquisition Period/unit"
         },
-        "rcs_animation_time": {
+        "animation_time": {
           "raw_path": "/NanonisMain/Animations Period/value",
           "@units": "/NanonisMain/Animations Period/unit"
         },
-        "rcs_measurement_time": {
+        "measurement_time": {
           "raw_path": "/NanonisMain/Measurements Period/value",
           "@units": "/NanonisMain/Measurements Period/unit"
         },
-        "rcs_indication_time": {
+        "indication_time": {
           "raw_path": "/NanonisMain/Indicators Period/value",
           "@units": "/NanonisMain/Indicators Period/unit"
         }
@@ -119,7 +118,7 @@
             "controller_label": {
               "raw_path": "/Z-Controller/Controller name/value"
             },
-            "z_offset": {
+            "z_offset_value": {
               "raw_path": "/Bias Spectroscopy/Z offset/value",
               "@units": "/Bias Spectroscopy/Z offset/unit"
             },
@@ -180,7 +179,7 @@
                 "raw_path": ["/Bias/Offset/value"],
                 "@units": "/Bias/Offset/unit"
               },
-              "scan_angle_N[scan_angle_n]": "",
+              "scan_angleN[scan_angle_n]": "",
               "scan_start_bias": {
                 "raw_path": "/Bias Spectroscopy/Sweep Start/value",
                 "@units": "/Bias Spectroscopy/Sweep Start/unit"
@@ -406,7 +405,7 @@
             "calibration_type": {
               "raw_path": "@default:active"
             },
-            "calibration_coefficient_N[calibration_coefficient_n]": [
+            "calibration_coefficientN[calibration_coefficient_n]": [
               {
                 "x": {
                   "raw_path": "/Piezo Configuration/Calib. X/value",
@@ -426,7 +425,7 @@
                 }
               }
             ],
-            "second_order_correction_N[second_order_correction_n]": [
+            "calibration_coefficientN[second_order_correction_n]": [
               {
                 "x": {
                   "raw_path": "/Piezo Configuration/2nd order corr X/value",
@@ -440,7 +439,7 @@
                 }
               }
             ],
-            "drift_N[drift_n]": [
+            "driftN[drift_n]": [
               {
                 "x": {
                   "raw_path": "/Piezo Configuration/Drift X/value",
@@ -460,12 +459,12 @@
                 }
               }
             ],
-            "hv_gain_N[hv_gain_n]": [
+            "hv_gainN[hv_gain_n]": [
               { "x": { "raw_path": "/Piezo Configuration/HV Gain X/value" } },
               { "y": { "raw_path": "/Piezo Configuration/HV Gain Y/value" } },
               { "z": { "raw_path": "/Piezo Configuration/HV Gain Z/value" } }
             ],
-            "tilt_N[tilt_n]": [
+            "tiltN[tilt_n]": [
               {
                 "x": {
                   "raw_path": "/Piezo Configuration/Tilt X/value",
@@ -541,40 +540,40 @@
             "raw_path": "/Scan/series name/value"
           },
           "scan_region": {
-            "scan_angle_N[scan_angle_n]": "",
-            "scan_offset_N[scan_offset_n]": "",
-            "scan_range_N[scan_range_n]": ""
+            "scan_angleN[scan_angle_n]": "",
+            "scan_offsetN[scan_offset_n]": "",
+            "scan_rangeN[scan_range_n]": ""
           },
-          "mesh_SCAN[mesh_scan]": {
-            "forward_speed_N[forward_speed_n]": "",
-            "backward_speed_N[backward_speed_n]": "",
+          "meshSCAN[mesh_scan]": {
+            "forward_speedN[forward_speed_n]": "",
+            "backward_speedN[backward_speed_n]": "",
             "scan_speed": { "@units": "" },
             "scan_time": { "@units": "" },
             "SCAN_DATA[scan_data]": ""
           },
           "scan_type": ""
         },
-        "cryo_bottom_temp": { "@units": "" },
-        "cryo_shield_temp": { "@units": "" },
-        "tip_temp": {
+        "cryo_bottom_temperature": { "@units": "" },
+        "cryo_shield_temperature": { "@units": "" },
+        "head_temperature": {
           "raw_path": "/Temperature 1/Temperature 1/value",
           "@units": "/Temperature 1/Temperature 1/unit"
         },
-        "cryo_shield_temp_sensor": "",
-        "cryo_temp_sensor": "",
-        "tip_temp_sensor": ""
+        "cryo_shield_temperature_sensor": "",
+        "cryo_bottom_temperature_sensor": "",
+        "head_temperature_sensor": ""
       },
       "TEMPERATURE[cryo_shield_temp_sensor]": {
         "CHANNEL_temp[channel_temp]": "",
         "temperature_calibration": { "coefficients": "" },
         "TEMPERATURE_DATA[temperature_data]": ""
       },
-      "TEMPERATURE[cryo_temp_sensor]": {
+      "TEMPERATURE[cryo_bottom_temperature_sensor]": {
         "CHANNEL_temp[channel_temp]": "",
         "temperature_calibration": { "coefficients": "" },
         "TEMPERATURE_DATA[temperature_data]": ""
       },
-      "TEMPERATURE[tip_temp_sensor]": {
+      "TEMPERATURE[head_temperature_sensor]": {
         "CHANNEL_temp[channel_temp]": "",
         "temperature_calibration": { "coefficients": "" },
         "TEMPERATURE_DATA[temperature_data]": [
@@ -720,8 +719,8 @@
     },
     "resolution_indicators": {
       "bias_sweep": "",
-      "cryo_bottom_temp": "",
-      "cryo_shield_temp": "",
+      "cryo_bottom_temperature": "",
+      "cryo_shield_temperature": "",
       "reference_frequency": "",
       "modulation_signal": "",
       "stm_head_temp": ""
