Add tabbed content.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,10 +39,12 @@ markdown_extensions:
   - pymdownx.emoji
   - pymdownx.extra
   - pymdownx.superfences:
-      custom_fences:
-        - name: mermaid
-          class: mermaid
-          format: !!python/name:pymdownx.superfences.fence_code_format
+      # custom_fences:
+      #   - name: mermaid
+      #     class: mermaid
+      #     format: !!python/name:pymdownx.superfences.fence_code_format
+  - pymdownx.tabbed:
+      alternate_style: true
 use_directory_urls: false
 theme:
   name: material
